// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkPhoneInput should render correctly 1`] = `
<DocumentFragment>
  <span
    class="bpk-phone-input"
  >
    <label
      class="bpk-label bpk-phone-input__dialing-code-label"
      for="dialing-code"
    >
      Dialing code
    </label>
    <select
      aria-invalid="false"
      class="bpk-select bpk-phone-input__dialing-code dialing-code"
      id="dialing-code"
      label="Dialing code"
      name="Dialing code"
      style="width: 118px;"
    >
      <option
        numberprefix="+44"
        value="44"
      >
        +44
      </option>
      <option
        numberprefix="+55"
        value="55"
      >
        +55
      </option>
    </select>
    <label
      class="bpk-label bpk-phone-input__phone-number-label"
      for="phone-input-id"
    >
      Telephone number
    </label>
    <input
      aria-invalid="false"
      class="bpk-input bpk-phone-input__phone-number fancy-input"
      id="phone-input-id"
      name="Telephone input"
      type="tel"
      value="1234"
    />
  </span>
</DocumentFragment>
`;

exports[`BpkPhoneInput should render correctly with a "disabled" attribute 1`] = `
<DocumentFragment>
  <span
    class="bpk-phone-input"
  >
    <label
      class="bpk-label bpk-label--disabled bpk-phone-input__dialing-code-label"
      for="dialing-code"
    >
      Dialing code
    </label>
    <select
      aria-invalid="false"
      class="bpk-select bpk-phone-input__dialing-code dialing-code"
      disabled=""
      id="dialing-code"
      label="Dialing code"
      name="Dialing code"
      style="width: 118px;"
    >
      <option
        numberprefix="+44"
        value="44"
      >
        +44
      </option>
      <option
        numberprefix="+55"
        value="55"
      >
        +55
      </option>
    </select>
    <label
      class="bpk-label bpk-label--disabled bpk-phone-input__phone-number-label"
      for="phone-input-id"
    >
      Telephone number
    </label>
    <input
      aria-invalid="false"
      class="bpk-input bpk-phone-input__phone-number fancy-input"
      disabled=""
      id="phone-input-id"
      name="Telephone input"
      type="tel"
      value="1234"
    />
  </span>
</DocumentFragment>
`;

exports[`BpkPhoneInput should render correctly with a "large" attribute 1`] = `
<DocumentFragment>
  <span
    class="bpk-phone-input bpk-phone-input--large"
  >
    <label
      class="bpk-label bpk-phone-input__dialing-code-label"
      for="dialing-code"
    >
      Dialing code
    </label>
    <select
      aria-invalid="false"
      class="bpk-select bpk-select--large bpk-phone-input__dialing-code dialing-code"
      id="dialing-code"
      label="Dialing code"
      name="Dialing code"
      style="width: 124px;"
    >
      <option
        numberprefix="+44"
        value="44"
      >
        +44
      </option>
      <option
        numberprefix="+55"
        value="55"
      >
        +55
      </option>
    </select>
    <label
      class="bpk-label bpk-phone-input__phone-number-label"
      for="phone-input-id"
    >
      Telephone number
    </label>
    <input
      aria-invalid="false"
      class="bpk-input bpk-input--large bpk-phone-input__phone-number fancy-input"
      id="phone-input-id"
      name="Telephone input"
      type="tel"
      value="1234"
    />
  </span>
</DocumentFragment>
`;

exports[`BpkPhoneInput should render correctly with a "valid" attribute 1`] = `
<DocumentFragment>
  <span
    class="bpk-phone-input"
  >
    <label
      class="bpk-label bpk-phone-input__dialing-code-label"
      for="dialing-code"
    >
      Dialing code
    </label>
    <select
      aria-invalid="false"
      class="bpk-select bpk-phone-input__dialing-code dialing-code"
      id="dialing-code"
      label="Dialing code"
      name="Dialing code"
      style="width: 118px;"
    >
      <option
        numberprefix="+44"
        value="44"
      >
        +44
      </option>
      <option
        numberprefix="+55"
        value="55"
      >
        +55
      </option>
    </select>
    <label
      class="bpk-label bpk-phone-input__phone-number-label"
      for="phone-input-id"
    >
      Telephone number
    </label>
    <input
      aria-invalid="false"
      class="bpk-input bpk-input--valid bpk-phone-input__phone-number fancy-input"
      id="phone-input-id"
      name="Telephone input"
      type="tel"
      value="1234"
    />
  </span>
</DocumentFragment>
`;

exports[`BpkPhoneInput should render correctly with a "wrapperProps" attribute 1`] = `
<DocumentFragment>
  <span
    aria-label="container"
    class="bpk-phone-input container"
  >
    <label
      class="bpk-label bpk-phone-input__dialing-code-label"
      for="dialing-code"
    >
      Dialing code
    </label>
    <select
      aria-invalid="false"
      class="bpk-select bpk-phone-input__dialing-code dialing-code"
      id="dialing-code"
      label="Dialing code"
      name="Dialing code"
      style="width: 118px;"
    >
      <option
        numberprefix="+44"
        value="44"
      >
        +44
      </option>
      <option
        numberprefix="+55"
        value="55"
      >
        +55
      </option>
    </select>
    <label
      class="bpk-label bpk-phone-input__phone-number-label"
      for="phone-input-id"
    >
      Telephone number
    </label>
    <input
      aria-invalid="false"
      class="bpk-input bpk-phone-input__phone-number fancy-input"
      id="phone-input-id"
      name="Telephone input"
      type="tel"
      value="1234"
    />
  </span>
</DocumentFragment>
`;

exports[`BpkPhoneInput should render correctly with a dialing code image attribute 1`] = `
<DocumentFragment>
  <span
    class="bpk-phone-input"
  >
    <label
      class="bpk-label bpk-phone-input__dialing-code-label"
      for="dialing-code"
    >
      Dialing code
    </label>
    <div
      class="bpk-select-wrapper dialing-wrapper"
    >
      <span
        aria-hidden="true"
        class="bpk-select-wrapper__image"
      />
      <select
        aria-invalid="false"
        class="bpk-select bpk-select--with-image bpk-phone-input__dialing-code dialing-code"
        id="dialing-code"
        label="Dialing code"
        name="Dialing code"
        style="width: 118px;"
      >
        <option
          numberprefix="+44"
          value="44"
        >
          +44
        </option>
        <option
          numberprefix="+55"
          value="55"
        >
          +55
        </option>
      </select>
    </div>
    <label
      class="bpk-label bpk-phone-input__phone-number-label"
      for="phone-input-id"
    >
      Telephone number
    </label>
    <input
      aria-invalid="false"
      class="bpk-input bpk-phone-input__phone-number fancy-input"
      id="phone-input-id"
      name="Telephone input"
      type="tel"
      value="1234"
    />
  </span>
</DocumentFragment>
`;

exports[`BpkPhoneInput should render correctly with the "dialingCodeMask" attribute 1`] = `
<DocumentFragment>
  <span
    class="bpk-phone-input"
  >
    <label
      class="bpk-label bpk-phone-input__dialing-code-label"
      for="dialing-code"
    >
      Dialing code
    </label>
    <select
      aria-invalid="false"
      class="bpk-select bpk-phone-input__dialing-code dialing-code"
      id="dialing-code"
      label="Dialing code"
      name="Dialing code"
      style="width: 118px;"
    >
      <option
        numberprefix="+44"
        value="44"
      >
        +44
      </option>
      <option
        numberprefix="+55"
        value="55"
      >
        +55
      </option>
    </select>
    <label
      class="bpk-label bpk-phone-input__phone-number-label"
      for="phone-input-id"
    >
      Telephone number
    </label>
    <input
      aria-invalid="false"
      class="bpk-input bpk-phone-input__phone-number fancy-input"
      id="phone-input-id"
      name="Telephone input"
      type="tel"
      value="+44 1234"
    />
  </span>
</DocumentFragment>
`;
